[package]
name = "new_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {defualt-features = false , features = ["full"], version = "0.12"}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = [] }
image = "0.24.8"